--- a/web/package.json
+++ b/web/package.json
@@ -6,13 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "format": "biome format --write",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "1.3.3",
+    "@tailwindcss/vite": "4.1.14",
+    "@tanstack/react-router": "1.132.47",
+    "@tanstack/react-router-devtools": "1.133.1",
+    "@tanstack/router": "0.0.1-beta.53",
+    "lucide-react": "0.545.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-resizable-panels": "3.0.6",
+    "shiki": "3.13.0",
+    "tailwind-merge": "3.3.1",
+    "tailwind-variants": "3.1.1",
+    "tailwindcss": "4.1.14"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.6",
+    "@tanstack/router-plugin": "1.132.56",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
