--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^24.7.2",
     "@types/pg": "8.15.5",
     "drizzle-kit": "0.31.5",
+    "prisma": "^7.1.0",
     "tsx": "4.20.6",
     "typescript": "~5.9.3"
   },
@@ -29,6 +30,7 @@
     "@ai-sdk/google": "2.0.25",
     "@fastify/cors": "11.1.0",
     "@fastify/swagger": "9.5.2",
+    "@prisma/client": "^7.1.0",
     "@scalar/fastify-api-reference": "1.38.0",
     "ai": "5.0.82",
     "drizzle-orm": "0.44.6",
